# segment-anything-tensorrt

./: .gitignore  CMakeLists.txt  Dockerfile.dev  LICENSE  README.md  README.md.bak  README_zh_CN.md  README_zh_windows.md  baseModel.h  demo.py  export.h  how_to_export_vim_h_model.ipynb  main.cpp  main_vim_h.cpp  sam.h  sam_utils.h  tutorials.ipynb  tutorials_vim_h.ipynb
commons/: ThreadPool.h  buffers.h  general.h
segment-anything/: MZ.py  tutorial-segment-anything.ipynb
segment-anything/segment_anything/: __init__.py
segment-anything/segment_anything/utils/: onnx.py
